--- a/scalpel-exceptt.cabal
+++ b/scalpel-exceptt.cabal
@@ -24,18 +24,26 @@ library
           Paths_scalpel_exceptt
     hs-source-dirs:
           src
+    default-extensions:
+          OverloadedStrings
     build-depends:
           base
         , mtl
         , scalpel
+        , text
     default-language: Haskell2010
 
 executable scalpel-exceptt
     main-is: Main.hs
     other-modules:
           Paths_scalpel_exceptt
+    hs-source-dirs:
+          app
+    default-extensions:
+          OverloadedStrings
     build-depends:
           base
         , mtl
         , scalpel
+        , text
     default-language: Haskell2010
