--- a/scalpel-exceptt.cabal
+++ b/scalpel-exceptt.cabal
@@ -20,6 +20,8 @@ source-repository head
     location: https://github.com/benjaminweb/scalpel-exceptt
 
 library
+    exposed-modules:
+          Lib
     other-modules:
           Paths_scalpel_exceptt
     hs-source-dirs:
@@ -30,6 +32,7 @@ library
           base
         , mtl
         , scalpel
+        , tagsoup
         , text
     default-language: Haskell2010
 
@@ -45,5 +48,6 @@ executable scalpel-exceptt
           base
         , mtl
         , scalpel
+        , tagsoup
         , text
     default-language: Haskell2010
