--- a/scalpel-exceptt.cabal
+++ b/scalpel-exceptt.cabal
@@ -34,6 +34,7 @@ library
         , scalpel
         , tagsoup
         , text
+        , transformers
     default-language: Haskell2010
 
 executable scalpel-exceptt
@@ -50,4 +51,5 @@ executable scalpel-exceptt
         , scalpel
         , tagsoup
         , text
+        , transformers
     default-language: Haskell2010
